--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@huggingface/inference": "^2.6.1",
     "@pinecone-database/pinecone": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
